...
                    Section("Goal Information") {
                        HStack {
                            Text("Title")
                            TextField(
                                "Title",
                                text: $viewModel.title,
                                prompt: Text("Enter the goal title here")
                            )
                            .accessibilityIdentifier("Title TextField")
                            .multilineTextAlignment(.trailing)
                            .tint(.blue)
                        }
                        HStack {
...
                            Spacer()
                            
                            TextField(
                                "Amount",
                                value: $viewModel.tasksNeeded,
                                format: .number,
                                prompt: Text("Enter the amount needed")
                            )
                            .accessibilityIdentifier("Amount TextField")
                            .multilineTextAlignment(.trailing)
                            .keyboardType(.decimalPad)
                            .tint(.blue)
                        }
                        Picker(selection: $viewModel.unit) {
                            ForEach(viewModel.units.list, id: \.self) {
...
                .navigationTitle("New Goal")
                .navigationBarTitleDisplayMode(.inline)
                .scrollContentBackground(.hidden)
                .toolbarBackground(.hidden)
                .preferredColorScheme(.light)
                .toolbar {
                    Button("Save") {
                        viewModel.addGoal()
                        if viewModel.dismiss {
                            dismiss()
                        }
                    }
                    .tint(.blue)
...
