...
                Text(goal.goalTitle)
                    .font(.headline)
                    .foregroundStyle(colorScheme == .dark ? .white : Colors.spartanSpinGreen)
                    .accessibilityIdentifier("Goal Title Toolbar")
            }
            ToolbarItemGroup {
                Button("Edit Goal", systemImage: "ellipsis") {
                    viewModel.showEditGoalView = true
                }
                .tint(colorScheme == .dark ? .white : .black)
                Button("Delete Goal", systemImage: "trash") {
                    viewModel.showingDeleteAlert = true
                }
...
